# metal-cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
demos/: CMakeLists.txt  application.cpp  conanfile.py
metal-cpp/: metal_cpp.cppm
sandbox/: application.cpp  mtk_view_delegate.hpp  renderer.hpp  types.hpp
test_package/: CMakeLists.txt  application.cpp  conanfile.py
